<resources>
    <string name="app_name">GetLoc</string>
    <string name="destinasi_wisata_disekitarmu">Destinasi Wisata Disekitarmu</string>
    <string name="lewati">Lewati</string>
    <string name="desc_one">Temukan Destinasi wisata terdekat yang ada disekitar mu. Kamu mungkin saja bisa menemukan tempat-tempat wisata yang belum terkenal namun ternyata sangat bagus.</string>
    <string name="title_two">Sesuaikan Dengan Kantong</string>
    <string name="desc_two">Kamu bisa memilih lokasi wisata yang sesuai dengan budget yang kamu miliki loh! kamu ga perlu khawatir lagi untuk bisa berlibur dan melepaskan semua penat mu.</string>
    <string name="title_three">Pilih Wisata Sesukamu!</string>
    <string name="desc_three">Tentu saja kamu bisa memilih tempat wisata yang kamu inginkan sendiri kok. Kemudian aplikasi kami akan memberikan rekomendasi rute terbaik dan paling efisien untuk sampai kesemua tempat</string>
    <string name="mulai_sekarang">Mulai Sekarang!</string>
    <string name="masukan_kota_anda">Masukan Kota Anda..</string>
    <string name="pencarian_terakhir">Pencarian Terakhir</string>
    <string name="place_api">AIzaSyDEoawtAM-ocTkX3aZxsrwtGnP3oOwQStY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="masukkan_tempat_tujuan_anda">Masukkan Tempat Tujuan Anda</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="title_plan">Plan</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_email_baru_anda">Masukkan Email Baru Anda</string>
    <string name="masukkan_password_baru_anda">Masukkan Password Baru Anda</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="update_email">Update Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="pilihan_trip_buat_kamu">Pilihan Trip buat Kamu</string>
    <string name="cek_trip_seru_buat_kamu">Cek trip seru buat kamu!</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftar">Daftar</string>
    <string name="atau">atau</string>
    <string name="lanjutkan_dengan_google">Lanjutkan dengan Google</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_trip_plan_kamu">Daftar Trip Plan Kamu</string>
    <string name="pastikan_trip_plan_kamu_sudah_sesuai">Pastikan trip plan kamu sudah sesuai</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="tidak_punya_akun">Tidak punya akun ?</string>
    <string name="rekomendasi_trip_plan">Rekomendasi Trip Plan</string>
    <string name="rekomendasi_trip_plan_buat_kamu">Rekomendasi trip plan buat kamu!</string>
    <string name="jakarta">Jakarta</string>
    <string name="plan_a">Plan A</string>
    <string name="rekomendasi_10_tempat_wisata_di_jakarta">Rekomendasi 10 Tempat Wisata di Jakarta</string>
    <string name="hello">Hello</string>
    <string name="lokasi_kamu">Lokasi kamu</string>
    <string name="none">None</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="detail_trip">Detail Trip</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubah_password">Ubah password</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
</resources>